objects/Customer_Facing_Activity__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Facing Activities</relationshipLabel>
        <relationshipName>Customer_Facing_Activities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Facing Activities</relationshipLabel>
        <relationshipName>Customer_Facing_Activities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Length_of_Visit_in_Hours__c</fullName>
        <label>Length of Visit in Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_of_Customer_Attendees__c</fullName>
        <label>Number of Customer Attendees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Facing Activities</relationshipLabel>
        <relationshipName>Customer_Facing_Activities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Owner_Functional_Role__c</fullName>
        <formula>TEXT(Owner:User.Functional_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Functional Role</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Owner_Manager_Name__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp;' '&amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Siebel_Activity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Activity ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Technical_Resource__c</fullName>
        <label>Technical Resource</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Visit_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No Technical Resource</fullName>
                </value>
                <value>
                    <fullName>Application Engineering</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>EDU Technical Evangelist</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Pilot Engineering</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Visit_Level__c</fullName>
        <label>Visit Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Visit_Type__c</fullName>
        <label>Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Solo with Remote Assistance</fullName>
                </value>
                <value>
                    <fullName>Technical Resource Assisted</fullName>
                </value>
                <value>
                    <fullName>Conference Call with NO Travel</fullName>
                </value>
                <value>
                    <fullName>WebEx with NO Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>MW_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>The purpose of this Custom Object is to Track Customer Facing Activities.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Customer Facing Activity</label><nameField>
        <label>Customer Facing Activity Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Customer Facing Activities</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><validationRules>
        <fullName>Account_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Account__c )</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account must be specified</errorMessage>
    </validationRules></CustomObject>